tdf#131956 dispose progressbar when its target is destroyed

Change-Id: Id54ac3a0ebfd360e4107583af7fb978aa69d3288
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93590
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>